--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "emailjs-com": "^2.6.4",
     "firebase": "^8.2.4",
     "framer-motion": "^3.1.1",
+    "heroku": "^7.52.0",
     "mime-type": "^4.0.0",
     "moment": "^2.29.1",
     "react": "^16.13.1",
